--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,7 +7,16 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>profile</ion-title>
+	 <ion-row>
+	 
+		 <ion-col col-1 left>
+		  <ion-icon name="menu" menuToggle></ion-icon>
+		 </ion-col>
+		 <ion-col col-11 align="center">
+		  <ion-title>profile</ion-title>
+		 </ion-col>
+		 
+	 </ion-row>
   </ion-navbar>
 
 </ion-header>
