Display postsand latest post

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,9 +20,9 @@
     </div>
     <div class="banner-sec">
       <ion-card>
-        <img src="http://studio45creations.ipage.com/projects/dev1/schoolmanagment/slaplike/images/{{userDetails.image}}" />
+        <img src="http://studio45creations.ipage.com/projects/dev1/schoolmanagment/slaplike/images/{{userDetails.profile_image}}" />
         <div class="person-image">
-          <img src="http://studio45creations.ipage.com/projects/dev1/schoolmanagment/slaplike/images/{{userDetails.image}}" />
+          <img src="http://studio45creations.ipage.com/projects/dev1/schoolmanagment/slaplike/images/{{userDetails.profile_image}}" />
           
         </div>
         <div class="card-title">{{userDetails.firstname}}{{userDetails.lastname}}</div>
