--- a/src/pages/displayposts/displayposts.html
+++ b/src/pages/displayposts/displayposts.html
@@ -45,7 +45,7 @@
             <ion-col>
               <button ion-button icon-left clear small>
                 <ion-icon name="thumbs-up"></ion-icon>
-                <div>{{post.like}} Likes</div>
+                <div>{{post.view_like}} Likes</div>
               </button>
             </ion-col>
             <ion-col>
